# beam-damage-localization

./: .gitignore  README.md  pyproject.toml
data/processed/: scenario_dataset.csv  scenario_dataset.xlsx  test.csv  train.csv  val.csv
data/raw/: Data tổng 27 trường hợp.xlsx
docs/: CODE_RULES.md  CURSOR_PROMPT.md  KEEP_TRACK.md  MODEL_COMPARISON.md  PROGRESS_REPORT_2026-04-16.md  PR_RULES.md  README.md  pipeline.md
scripts/: 01_build_dataset.py  02_split_dataset.py  03_train_baseline.py  04_error_analysis.py  _bootstrap.py  inspect_dataset.py
scripts/analysis/: 04_error_analysis.py  05_evaluate.py
scripts/data/: 01_build_dataset.py  02_split_dataset.py  inspect_dataset.py
scripts/train/: 03_train_baseline.py  03_train_xgb.py  04_train_mlp.py  08_train_xgb_advanced.py  09_train_cnn1d.py
scripts/tune/: 06_tune_rf.py  07_tune_xgb.py  10_tune_xgb_advanced.py  11_tune_mlp.py  12_tune_cnn1d.py
src/config/: settings.py
src/data/: build_dataset.py  load_excel.py  split_dataset.py
src/eval/: evaluate.py  metrics.py
src/features/: baseline_features.py  physics_features.py  wavelet_features.py
src/models/: baseline_mlp.py  baseline_sklearn.py  baseline_xgb.py  cnn1d.py
